--- a/Wishlist test/Base.lproj/Main.storyboard
+++ b/Wishlist test/Base.lproj/Main.storyboard
@@ -76,8 +76,8 @@
                                     <action selector="setDefaultLabelText:" destination="pql-Xe-7by" eventType="touchUpInside" id="V21-sS-pG7"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="default photo" translatesAutoresizingMaskIntoConstraints="NO" id="erj-SF-GTY">
-                                <rect key="frame" x="67" y="213" width="240" height="241"/>
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="default photo" translatesAutoresizingMaskIntoConstraints="NO" id="erj-SF-GTY">
+                                <rect key="frame" x="16" y="152" width="240" height="241"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <gestureRecognizers/>
                                 <connections>
